[package]
authors = ["Shiwen Jia<jiashiwen126@126.com"]
name = "casbin_rbatis_adapter"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/jiashiwen/casbin-rbatis-adapter"
description = "Rbatis adapter for casbin-rs."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
casbin = { version = "2.0.9", default-features = false, features = ["runtime-async-std", "logging", "incremental"] }
serde = { version = "1.0.147", features = ["derive"] }
async-trait = "0.1.60"
# rbatis integration
rbs = "0.1.13"
rbatis = "4.0.43"

[dev-dependencies]
rbdc-mysql = "0.1.18"

[[example]]
name = "mysql_sample"
path = "examples/mysql_sample.rs"
